--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "nodemon": "^1.11.0",
     "q": "^1.4.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
