--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.9",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "bcrypt-nodejs": "0.0.3",
     "express": "^4.14.0",
     "mongoose": "^4.7.1",
@@ -14,9 +18,12 @@
     "react-dom": "^15.4.1",
     "webpack": "^1.14.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^1.14.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack -d --watch",
+    "build" : "webpack -p"
   },
   "repository": {
     "type": "git",
