--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "express-sessions": "^1.0.6",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
