--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
