--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack": "^1.14.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "webpack": "^1.14.0"
   },
   "scripts": {
