Moved Test files to test directory

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build": "webpack -p",
     "start": "nodemon --ignore node_modules ./server/server.js",
     "reset": "mongo catFight --eval \"db.dropDatabase()\"",
-    "db": "node ./server/insertDummyData.js"
+    "db": "node ./server/test/insertDummyData.js"
   },
   "repository": {
     "type": "git",
