--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
+    "passport-google-oauth20": "^1.0.0",
     "q": "^1.4.1",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
