--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "bootstrap-social": "^5.1.1",
     "chart.js": "^2.4.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "express-sessions": "^1.0.6",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.1",
